Updated swagger.yaml for PDS DOI API to match latest version in SwaggerHub
New version includes schemas for label payload which may be provided with a draft/reserve POST request

Added model classes for label_payload and labels_payload definitions to pds_doi_service/api/models

These classes were auto-generated from SwaggerHub code-gen service using latest swagger.yaml

Fixed issues in dois_controller.py

OSTI XML record was is now added to DoiRecord response as the record field
vid is now only parsed from doi.related_identifier if it is present

Added support for parsing  a responseBody provided to a draft/reserve POST request

The responseBody is parsed and written to a temporary file.
The path to the temp file is then provided to the draft/reserve action as input.

Reorganized unit tests for dois/ POST endpoint, and added new tests for draft/reserve with requestBody

change READMe with command to launch api server
