# pds_doi_service/api/models/__init__.py
@@ -6,3 +6,5 @@ from __future__ import absolute_import
 from .base_model_ import Model
 from .doi_record import DoiRecord
 from .doi_summary import DoiSummary
+from .label_payload import LabelPayload
+from .labels_payload import LabelsPayload
